<resources>
    <string name="designsystem_action_apply">Apply</string>
    <string name="designsystem_action_back">Back</string>
    <string name="designsystem_action_cancel">Cancel</string>
    <string name="designsystem_action_clear">Clear text</string>
    <string name="designsystem_action_close">Close</string>
    <string name="designsystem_action_collapse">Collapse</string>
    <string name="designsystem_action_done">Done</string>
    <string name="designsystem_action_confirmation">Are you sure?</string>
    <string name="designsystem_action_expand">Expand</string>
    <string name="designsystem_action_favorite">Favorite</string>
    <string name="designsystem_action_login">Login</string>
    <string name="designsystem_action_logout">Logout</string>
    <string name="designsystem_action_no">No</string>
    <string name="designsystem_action_ok">OK</string>
    <string name="designsystem_action_open">Open</string>
    <string name="designsystem_action_open_file">Open</string>
    <string name="designsystem_action_reset">Reset</string>
    <string name="designsystem_action_retry">Retry</string>
    <string name="designsystem_action_search">Search</string>
    <string name="designsystem_action_send">Send</string>
    <string name="designsystem_action_share">Share</string>
    <string name="designsystem_action_yes">Yes</string>

    <string name="designsystem_hint_search">Search…</string>

    <string name="designsystem_content_description_action_collapse">Collapse</string>
    <string name="designsystem_content_description_action_expand">Expand</string>
    <string name="designsystem_content_description_state_collapsed">Collapsed</string>
    <string name="designsystem_content_description_state_expanded">Expanded</string>
    <string name="designsystem_content_description_state_edit">Edit</string>
...
